fixed spacing

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -12,10 +12,13 @@
 body, html {
     margin: 0;
     padding: 0;
+}
+
+body {
+    padding: 30px 10px;
     background: linear-gradient(161deg, var(--bg) 50%, var(--bg-1) 88%);
     background-repeat: no-repeat;
     gap: 35px;
-    padding: 30px 10px;
     align-items: center;
     min-height: 100vh;
 }
